--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="topContainer">
       <img class="topCloud" src="./icons/cloud.png" alt="cloud-img">
-      <h1>I'm [Name]</h1>
+      <h1>I'm Rob</h1>
       <h2>[Brief Bio]</h2>
       <img class="bottomCloud" src="./icons/cloud.png" alt="cloud-img">
       <img src="./icons/mountain.png" alt="mountain-img">
